Added colors to statusboxes

--- a/client/src/client.less
+++ b/client/src/client.less
@@ -45,7 +45,14 @@
   table-layout: fixed;
   vertical-align: middle;
 }
-
+.bg-danger {
+    background-color: #f05050;
+    color: #fff!important;
+}
+.bg-danger-dark {
+    background-color: #ec2121;
+    color: #fff!important;
+}
 .bg-warning {
   background-color: #ff902b;
   color: #ffffff !important;
