--- a/client/src/client.less
+++ b/client/src/client.less
@@ -44,6 +44,7 @@
   float: none;
   table-layout: fixed;
   vertical-align: middle;
+  text-align: center;
 }
 .bg-danger {
     background-color: #f05050;
